# soubim-aios-squads

./: .coderabbit.yaml  .gitignore  DEVELOPMENT.md  DecisionLog_Project_Brief.md  MOCK_DATA_SETUP.md  dev.bat  dev.sh  package.json
decision-log-backend/: .env.development  .env.example  .gitignore  DATABASE_SETUP.md  Dockerfile  POSTMAN_COLLECTION.json  README.md  SECURITY.md  alembic.ini  decisionlog_dev.db  docker-compose.yml  pyproject.toml  requirements.txt
decision-log-backend/.github/workflows/: test.yml
decision-log-backend/alembic/: env.py
decision-log-backend/app/: config.py  main.py  scheduler.py
decision-log-backend/app/database/: init_db.py  models.py  seed.py  session.py
decision-log-backend/app/prompts/: extract_document.md  extract_email.md  extract_meeting.md
decision-log-backend/app/services/: auth_service.py  document_extractor.py  document_processor.py  drive_client.py  drive_monitor.py  email_extractor.py  email_matcher.py  enrichment_service.py  extraction_v2.py  gmail_auth.py  gmail_poller.py  ingestion_pipeline.py  project_service.py  prompt_loader.py  summary_service.py
decision-log-backend/app/utils/: security.py
decision-log-backend/scripts/: pre_migration_backup.sh
decision-log-backend/tests/: conftest.py  test_email_extractor.py
decision-log-backend/tests/unit/: test_auth.py  test_database.py  test_document_processor.py  test_drive_client.py  test_drive_monitor.py  test_email_matcher.py  test_extraction_v2.py  test_gmail_auth.py  test_gmail_poller.py  test_ingestion_api.py  test_migration_v2.py  test_participants_api.py  (+4 more)
(+361 files in other folders)
