[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-log-backend"
version = "1.0.0"
description = "DecisionLog - AI-Powered Architectural Decision System Backend"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "postgresql: mark test as requiring PostgreSQL (auto-skipped if unavailable)",
]
# PostgreSQL test configuration:
# Local dev: auto-detected from .env.development (requires: docker compose up -d db)
# CI: set TEST_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/decisionlog
# Force SQLite: TEST_DATABASE_URL=sqlite:// pytest
